...
        android:gravity="center"
        android:maxLines="3"
        android:textColor="#000000"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:id="@+id/topRatingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ratingContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/ratingView0"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="0"
                android:text="0" />
...
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="5"
                android:text="5" />

            <TextView
                android:id="@+id/ratingView6"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="6"
                android:text="6" />
...
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="7"
                android:text="7" />

            <TextView
                android:id="@+id/ratingView8"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="8"
                android:text="8" />

            <TextView
                android:id="@+id/ratingView9"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="9"
                android:text="9" />

            <TextView
                android:id="@+id/ratingView10"
                style="@style/NPSCircle"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="10"
                android:text="10" />
...
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="@dimen/text_medium" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtReason"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/txtFeedbackQstn"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
...
            android:fillViewport="false"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/optionsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>
...
